added stuff needed by travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,12 @@ script:
   - mkdir -p appdir/usr/bin ; cd appdir
   - dpkg -x ../app_1-1_amd64.deb . ; find .
   - mv ./usr/local/bin/* ./usr/bin/ # Why is this needed despite PREFIX=/usr? Bug?
-  - cp ./usr/share/icons/hicolor/48x48/apps/fastqt.png .
-  - cp ./usr/share/applications/fastqt.desktop .
+  - cp ./usr/share/icons/hicolor/48x48/apps/ComputingResources.png .
+  - cp ./usr/share/applications/ComputingResources.desktop .
   - cd ..
   - wget -c "https://github.com/probonopd/linuxdeployqt/releases/download/3/linuxdeployqt-3-x86_64.AppImage"
   - chmod a+x linuxdeployqt*.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
   - ./linuxdeployqt*.AppImage ./appdir/usr/bin/* -bundle-non-qt-libs
   - ./linuxdeployqt*.AppImage ./appdir/usr/bin/* -appimage
-  - curl --upload-file ./ComputingResources*.AppImage https://transfer.sh/FastQt-git.$(git rev-parse --short HEAD)-x86_64.AppImage
+  - curl --upload-file ./ComputingResources*.AppImage https://transfer.sh/ComputingResources-git.$(git rev-parse --short HEAD)-x86_64.AppImage
